deploy: c6d67125d181bde289caeb6e6ec1bb8c2747395d

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </a>
 
   <div class="flex justify-end">
-    <button class="px-4 pb-3 pt-3 ml-1 hover:bg-gray-100 dark:hover:bg-gray-800 rounded" onclick="switchTheme()">
+    <button class="px-4 pb-3 pt-3 ml-1 hover:bg-gray-100 dark:hover:bg-gray-800 rounded" onclick="switchTheme()" aria-label="Switch between dark mode and light mode">
       <!-- Dark Icon  -->
       <svg
         class="align-middle block dark:hidden" height="23" width="23" alt="click to enable dark mode"
