--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     Lucas Arantes
   </title>
 
+  <meta name="description" content="Blog about Ruby, Elixir, command line, text editors, developer productivity, etc.">
+
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
