deploy: cf0a1659a3f382da9bd49b1923d82955d9fc6005

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     <main class="flex-1">
       <div class="intro text-md md:text-xl mb-5 text-center">
   <div>
-    <span class="inline mb-2">Software Engineer at <a href="https://smile.io/careers" target="_blank"
-        rel="noreferrer">Smile.io</a>.</span>
-    <span class="inline mb-2">Sharing things I learn here 👇</span>
+    <span class="block md:inline mb-2">Software Engineer at <a href="https://smile.io/careers" target="_blank" rel="noreferrer">Smile.io</a>.</span>
+    <span class="block md:inline mb-2">Sharing things I learn here 👇</span>
   </div>
 </div>
 
