deploy: a86858f31bb2530a364d843d8f6e7190d5ea2e3d

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
+  <link rel="sitemap" href="/sitemap.xml" type="application/xml" />
 </head>
 
 <body class="dark:bg-gray-900"></body>
