deploy: 07c969576dc7f5b510c335be15c1b71e04c36a14

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         Alguém Recommenda? (pt-BR)
       </h2>
       <div class="text-xs mt-1">
-        Lista de Brasileiros oferecendo produtos ou serviços na grande Montréal. 🇧🇷 💙 🇨🇦
+        List of Brazilian businesses offering products or services in greater Montréal. 🇧🇷 💙 🇨🇦
       </div>
     </div>
   </a>
