deploy: d0f9d67feea4de9164ed590e0b922b6bfa63ae97

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Lucas Arantes
   </title>
 
-  <meta name="description" content="Blog about Ruby, Elixir, command line, text editors, developer productivity, etc.">
+  <meta name="description" content="Blog about Ruby, Elixir, command line, text editors, developer productivity, personal projects, etc.">
 
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="/assets/css/main.css">
