deploy: e23295592fcc0ee6024e227d3c69752b8fa4263b

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
   <link rel="sitemap" href="/sitemap.xml" type="application/xml" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WTKH1J2E5Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WTKH1J2E5Z');
+</script>
 </head>
 
 <body class="dark:bg-gray-900"></body>
