deploy: 8870c528cab1b80879fa1f1eee10fad030548c58

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
 
   
 
+  <a href="https://teamlead.tools" target="_blank" rel="noreferrer"
+    class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
+    <div class="w-full p-2">
+      <h2 class="font-semibold text-md">
+        TeamLead.tools
+      </h2>
+      <div class="text-xs mt-1">
+        Tools for teams working remotely.
+      </div>
+    </div>
+  </a>
+
+  
+
   <a href="https://alguemrecomenda.ca/" target="_blank" rel="noreferrer"
     class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
     <div class="w-full p-2">
@@ -77,20 +91,6 @@
       </h2>
       <div class="text-xs mt-1">
         List of Brazilian businesses offering products or services in greater Montréal. 🇧🇷 💙 🇨🇦
-      </div>
-    </div>
-  </a>
-
-  
-
-  <a href="https://formigabot.com/" target="_blank" rel="noreferrer"
-    class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
-    <div class="w-full p-2">
-      <h2 class="font-semibold text-md">
-        FormigaBot
-      </h2>
-      <div class="text-xs mt-1">
-        The all-in-one bot for Slack for tech startups working async.
       </div>
     </div>
   </a>
