deploy: 610115f66385ed163b995001afad26caf0d21042

--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
 
   
 
+  <a href="https://marketplace.visualstudio.com/items?itemName=lucasprag.teamdocs" target="_blank" rel="noreferrer"
+    class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
+    <div class="w-full p-2">
+      <h2 class="font-semibold text-md">
+        VSCode Extension: TeamDocs
+      </h2>
+      <div class="text-xs mt-1">
+        TeamDocs ensures that your centralized documentation is conveniently accessible from the Activity Bar, regardless of the specific project you are currently working on.
+      </div>
+    </div>
+  </a>
+
+  
+
 </div>
 
 
