--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     <main class="flex-1">
       <div class="intro text-md md:text-xl mb-5 text-center">
   <div>
-    <span class="block md:inline mb-2">Software Engineer at <a href="https://smile.io/careers" target="_blank" rel="noreferrer">Smile.io</a>.</span>
-    <span class="block md:inline mb-2">Sharing things I learn here 👇</span>
+    <span class="block md:inline mb-2">
+      Software Engineer with over 10 years of experience, building side projects with Elixir.
+    </span>
   </div>
 </div>
 
