--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h2 class="font-semibold text-md">
         TeamLead.tools
       </h2>
-      <div class="text-xs mt-1">
+      <div class="text-sm mt-1">
         Tools for teams working remotely.
       </div>
     </div>
@@ -90,7 +90,7 @@
       <h2 class="font-semibold text-md">
         Alguém Recommenda? (pt-BR)
       </h2>
-      <div class="text-xs mt-1">
+      <div class="text-sm mt-1">
         List of Brazilian businesses offering products or services in greater Montréal. 🇧🇷 💙 🇨🇦
       </div>
     </div>
@@ -104,7 +104,7 @@
       <h2 class="font-semibold text-md">
         VSCode Extension: TeamDocs
       </h2>
-      <div class="text-xs mt-1">
+      <div class="text-sm mt-1">
         TeamDocs ensures that your centralized documentation is conveniently accessible from the Activity Bar, regardless of the specific project you are currently working on.
       </div>
     </div>
@@ -122,6 +122,28 @@
 
 <div>
 
+
+<a href="/posts/bad-advice-focus-on-one-thing/"
+  class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
+  <div class="w-full p-2">
+    <h2 class="font-semibold text-md">
+      Bad Advice for indie hackers: Focus on one thing.
+    </h2>
+    <div class="text-xs mt-1">
+      <time class="text-center font-medium py-3 mr-2 text-gray-700 dark:text-gray-400">
+        February 15, 2024
+      </time>
+
+      <!-- <span class="mx-2 text-gray-700 dark:text-gray-400">-</span> -->
+
+      
+      <span class="tag mr-1">
+        indie hacking
+      </span>
+      
+    </div>
+  </div>
+</a>
 
 <a href="/posts/underrated-vscode-feature-search-editor/"
   class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
@@ -395,7 +417,7 @@
       aria-label="Visit my Github profile"
       class="px-4 pb-3 pt-4 ml-1 hover:bg-gray-100 dark:hover:bg-gray-800 rounded" target="_blank">
       <!-- Github Icon -->
-      <svg class="align-middle" height="25" width="25" alt="my twitter profile" xmlns="http://www.w3.org/2000/svg"
+      <svg class="align-middle" height="25" width="25" alt="my github profile" xmlns="http://www.w3.org/2000/svg"
         focusable="false" width="25" height="25" viewBox="0 0 25 25" fill="currentColor">
         <path
           d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
