deploy: 879ff02ff3c25c77c3be3b57444c75a9ebc861f1

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 
   
 
-  <a href="https://teamlead.tools" target="_blank" rel="noreferrer"
+  <a href="https://storypoints.online/" target="_blank" rel="noreferrer"
     class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
     <div class="w-full p-2">
       <h2 class="font-semibold text-md">
-        TeamLead.tools
+        StoryPoints.online
       </h2>
       <div class="text-sm mt-1">
-        Tools for teams working remotely.
+        Estimate your stories & tasks faster in real time without letting the first response influence the others.
       </div>
     </div>
   </a>
