deploy: 3dd44cbfe4949dbc190820abc902d2083e5aacc2

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
   <div class="w-full p-2">
     <h2 class="font-semibold text-md">
-      Bad Advice for indie hackers: Focus on one thing.
+      Bad Advice for Solopreneurs: Focus on one thing.
     </h2>
     <div class="text-xs mt-1">
       <time class="text-center font-medium py-3 mr-2 text-gray-700 dark:text-gray-400">
@@ -136,6 +136,10 @@
 
       <!-- <span class="mx-2 text-gray-700 dark:text-gray-400">-</span> -->
 
+      
+      <span class="tag mr-1">
+        solopreneurship
+      </span>,
       
       <span class="tag mr-1">
         indie hacking
