deploy: 160f1ae455db64bb544187b465b75e0177d6caee

--- a/index.html
+++ b/index.html
@@ -12,11 +12,33 @@
   </title>
 
   <meta name="description" content="Blog about Ruby, Elixir, command line, text editors, developer productivity, personal projects, etc.">
+  <meta name="keywords" content="Blog about Ruby, Elixir, command line, text editors, developer productivity, personal projects, etc.">
 
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
-  <link rel="sitemap" href="/sitemap.xml" type="application/xml" />
+  <meta content="Lucas Arantes" property="og:site_name">
+
+  <meta content="Lucas Arantes" property="og:title">
+
+
+  <meta content="website" property="og:type">
+
+
+  <meta content="Blog about Ruby, Elixir, command line, text editors, developer productivity, personal projects, etc." property="og:description">
+
+
+  <meta content="https://lucasprag.com/" property="og:url">
+
+
+
+  <meta content="https://lucasprag.com/assets/images/computer.png" property="og:image">
+
+
+
+
+  <link rel="canonical" href="https://lucasprag.com/">
+  <link rel="icon" type="image/x-icon" href="https://lucasprag.com/assets/images/favicon.ico">
+  <link rel="stylesheet" href="https://lucasprag.com/assets/css/main.css">
+  <link rel="alternate" type="application/rss+xml" href="https://lucasprag.com/feed.xml" title="RSS 2.0" />
+  <link rel="sitemap" href="https://lucasprag.com/sitemap.xml" type="application/xml" />
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WTKH1J2E5Z"></script>
 <script>
@@ -29,8 +51,8 @@
 </head>
 
 <body class="dark:bg-gray-900"></body>
-  <div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
-    <div class="flex justify-between my-8">
+<div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
+  <div class="flex justify-between my-8">
   <a href="/" class="bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 px-4 py-3 rounded">
     <h1 class="font-medium text-xl">
       <img src="/assets/images/computer.png" height="15" width="15" alt="lucasprag emoji" class="inline" />
@@ -53,8 +75,8 @@
   </div>
 </div>
 
-    <main class="flex-1">
-      <div class="intro text-md md:text-xl mb-5 text-center">
+  <main class="flex-1">
+    <div class="intro text-md md:text-xl mb-5 text-center">
   <div>
     <span class="block md:inline mb-2">
       Software Engineer with over 10 years of experience, building side projects with Elixir.
@@ -414,8 +436,8 @@
 
 </div>
 
-    </main>
-    <footer class="mt-8">
+  </main>
+  <footer class="mt-8">
   <div class="flex justify-center">
     <a href="https://github.com/lucasprag"
       aria-label="Visit my Github profile"
@@ -446,13 +468,14 @@
     </a>
   </div>
 </footer>
-  </div>
+</div>
 
-  <script src="/assets/js/main.js"></script>
+<script src="https://lucasprag.com/assets/js/main.js"></script>
 
-  <!-- 100% privacy-first analytics -->
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+<!-- 100% privacy-first analytics -->
+<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+    referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
