deploy: 24d433d8f20330c1f4dbe1e97fe953e6e9ca3a49

--- a/index.html
+++ b/index.html
@@ -419,6 +419,16 @@
 </div>
 
   </main>
+
+  <div class="mt-10 py-7">
+  <div class="mx-auto max-w-[700px]">
+    <h1 class="font-semibold text-lg">
+      Subscribe to my newsletter 💌
+    </h1>
+    <script async data-uid="bcf06ab548" src="https://lucasprag.ck.page/bcf06ab548/index.js"></script>
+  </div>
+</div>
+
   <footer class="mt-8">
   <div class="flex justify-center">
     <a href="https://github.com/lucasprag"
