--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
   <div class="flex justify-between my-8">
   <a href="/" class="bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 px-4 py-3 rounded">
-    <h1 class="font-medium text-xl">
+    <p class="font-medium text-xl">
       <img src="/assets/images/computer.png" height="15" width="15" alt="lucasprag emoji" class="inline" />
       <span class="ml-2">lucasprag</span>
-    </h1>
+    </p>
   </a>
 
   <div class="flex justify-end">
@@ -89,6 +89,26 @@
 </h1>
 
 <div>
+
+  
+
+  <a href="https://sharethegood.news/" target="_blank" rel="noreferrer"
+    class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-300 dark:bg-gray-800 dark:hover:bg-gray-700">
+    <div class="w-full p-2">
+      <h2 class="font-semibold text-md">
+        Share The Good News <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
+  <g id="External_Link">
+    <path id="Vector"
+      d="M10.0002 5H8.2002C7.08009 5 6.51962 5 6.0918 5.21799C5.71547 5.40973 5.40973 5.71547 5.21799 6.0918C5 6.51962 5 7.08009 5 8.2002V15.8002C5 16.9203 5 17.4801 5.21799 17.9079C5.40973 18.2842 5.71547 18.5905 6.0918 18.7822C6.5192 19 7.07899 19 8.19691 19H15.8031C16.921 19 17.48 19 17.9074 18.7822C18.2837 18.5905 18.5905 18.2839 18.7822 17.9076C19 17.4802 19 16.921 19 15.8031V14M20 9V4M20 4H15M20 4L13 11"
+      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+  </g>
+</svg>
+      </h2>
+      <div class="text-sm mt-1">
+        Helping christians share the good news of Jesus in Canada.
+      </div>
+    </div>
+  </a>
 
   
 
@@ -422,9 +442,9 @@
 
   <div class="mt-10 py-7">
   <div class="mx-auto max-w-[700px]">
-    <h1 class="font-semibold text-lg">
+    <p class="font-semibold text-lg">
       Subscribe to my newsletter 💌
-    </h1>
+    </p>
     <script async data-uid="bcf06ab548" src="https://lucasprag.ck.page/bcf06ab548/index.js"></script>
   </div>
 </div>
