--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </script>
 </head>
 
-<body class="bg-gray-200 dark:bg-gray-900"></body>
+<body class="bg-gray-200 dark:bg-gray-900">
 <div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
   <div class="flex justify-between my-8">
   <a href="/" class="bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 px-4 py-3 rounded">
@@ -126,26 +126,6 @@
       </h2>
       <div class="text-sm mt-1">
         Estimate your stories & tasks faster in real time without letting the first response influence the others.
-      </div>
-    </div>
-  </a>
-
-  
-
-  <a href="https://alguemrecomenda.ca/" target="_blank" rel="noreferrer"
-    class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-300 dark:bg-gray-800 dark:hover:bg-gray-700">
-    <div class="w-full p-2">
-      <h2 class="font-semibold text-md">
-        Alguém Recommenda? (pt-BR) <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
-  <g id="External_Link">
-    <path id="Vector"
-      d="M10.0002 5H8.2002C7.08009 5 6.51962 5 6.0918 5.21799C5.71547 5.40973 5.40973 5.71547 5.21799 6.0918C5 6.51962 5 7.08009 5 8.2002V15.8002C5 16.9203 5 17.4801 5.21799 17.9079C5.40973 18.2842 5.71547 18.5905 6.0918 18.7822C6.5192 19 7.07899 19 8.19691 19H15.8031C16.921 19 17.48 19 17.9074 18.7822C18.2837 18.5905 18.5905 18.2839 18.7822 17.9076C19 17.4802 19 16.921 19 15.8031V14M20 9V4M20 4H15M20 4L13 11"
-      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-  </g>
-</svg>
-      </h2>
-      <div class="text-sm mt-1">
-        List of Brazilian businesses offering products or services in greater Montréal. 🇧🇷 💙 🇨🇦
       </div>
     </div>
   </a>
