deploy: a6ca9615dcedb0f95e2cf9b1a46819049b87a676

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="intro text-md md:text-xl mb-5 text-center">
   <div>
     <span class="block md:inline mb-2">
-      Software Engineer with over 10 years of experience, building side projects with Elixir.
+      Working as a Software Engineer for over 10 years, building side projects for fun.
     </span>
   </div>
 </div>
