--- a/index.html
+++ b/index.html
@@ -155,6 +155,26 @@
   
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
+      <a href="/posts/tech-interview-tips/"
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md py-2">
+        Tech Interview Tips
+      </a>
+      <div class="text-xs mt-1">
+        <time class="text-center font-medium py-3 mr-2 text-gray-700 dark:text-gray-400">
+          March 27, 2025
+        </time>
+
+        <!-- <span class="mx-2 text-gray-700 dark:text-gray-400">-</span> -->
+
+        
+        <span class="tag mr-1">interview tips</span>
+        
+      </div>
+    </div>
+  </div>
+  
+  <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
+    <div class="w-full p-2">
       <a href="/posts/bad-advice-focus-on-one-thing/"
         class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md py-2">
         Bad Advice for Solopreneurs: Focus on one thing.
