deploy: d05170572ac1981dd8b5a401e381b098fbc1bad4

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <div class="hidden sm:ml-6 sm:block">
         <div class="flex space-x-4">
           <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-          <a href="/" class="btn-nav mt-5" aria-current="page">Home</a>
-          <a href="/projects" class="btn-nav mt-5" aria-current="">Projects</a>
+          <a href="/" class="btn-nav mt-3" aria-current="page">Home</a>
+          <a href="/projects" class="btn-nav mt-3" aria-current="">Projects</a>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
   </div>
 
   <!-- Mobile menu, show/hide based on menu state. -->
-  <div class="hidden sm:hidden bg-gray-900 rounded" id="mobile-menu">
+  <div class="hidden sm:hidden bg-gray-300 dark:bg-gray-900 rounded" id="mobile-menu">
     <div class="space-y-1 px-2 py-2">
       <a href="/" class="block btn-nav" aria-current="page">Home</a>
       <a href="/projects" class="block btn-nav" aria-current="">Projects</a>
