--- a/projects.html
+++ b/projects.html
@@ -95,8 +95,8 @@
       <div class="hidden sm:ml-6 sm:block">
         <div class="flex space-x-4">
           <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-          <a href="/" class="btn-nav mt-5" aria-current="">Home</a>
-          <a href="/projects" class="btn-nav mt-5" aria-current="page">Projects</a>
+          <a href="/" class="btn-nav mt-3" aria-current="">Home</a>
+          <a href="/projects" class="btn-nav mt-3" aria-current="page">Projects</a>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
   </div>
 
   <!-- Mobile menu, show/hide based on menu state. -->
-  <div class="hidden sm:hidden bg-gray-900 rounded" id="mobile-menu">
+  <div class="hidden sm:hidden bg-gray-300 dark:bg-gray-900 rounded" id="mobile-menu">
     <div class="space-y-1 px-2 py-2">
       <a href="/" class="block btn-nav" aria-current="">Home</a>
       <a href="/projects" class="block btn-nav" aria-current="page">Projects</a>
@@ -199,6 +199,25 @@
       </a>
       <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
         TeamDocs ensures that your centralized documentation is conveniently accessible from the Activity Bar, regardless of the specific project you are currently working on.
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
+    <div class="w-full p-2">
+      <a href="https://github.com/lucasprag/simpleblack" target="_blank" rel="noreferrer"
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md">
+        SimpleBlack <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
+  <g id="External_Link">
+    <path id="Vector"
+      d="M10.0002 5H8.2002C7.08009 5 6.51962 5 6.0918 5.21799C5.71547 5.40973 5.40973 5.71547 5.21799 6.0918C5 6.51962 5 7.08009 5 8.2002V15.8002C5 16.9203 5 17.4801 5.21799 17.9079C5.40973 18.2842 5.71547 18.5905 6.0918 18.7822C6.5192 19 7.07899 19 8.19691 19H15.8031C16.921 19 17.48 19 17.9074 18.7822C18.2837 18.5905 18.5905 18.2839 18.7822 17.9076C19 17.4802 19 16.921 19 15.8031V14M20 9V4M20 4H15M20 4L13 11"
+      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+  </g>
+</svg>
+      </a>
+      <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
+        A black colorscheme for (neo)vim, real black background, #000000.
       </div>
     </div>
   </div>
