--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 class="py-3 px-5 font-semibold text-2xl border-gray-200 dark:border-gray-700">
+<h1 class="py-3 px-5 font-semibold text-4xl border-gray-200 dark:border-gray-700">
   Projects
 </h1>
 
@@ -12,10 +12,10 @@ layout: default
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
       <a href="{{project.url}}" target="_blank" rel="noreferrer"
-        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md">
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-2xl">
         {{project.name}} {% include external.html size="18px" %}
       </a>
-      <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
+      <div class="text-lg mt-1 text-gray-700 dark:text-gray-400">
         {{project.description}}
       </div>
     </div>
