deploy: 6c480fa59f1e8642dc7003b99c67d9ce94cc1d83

--- a/projects.html
+++ b/projects.html
@@ -84,9 +84,9 @@
 
     <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
       <div class="flex shrink-0 items-center">
-        <a href="/" class="px-4 py-3 rounded">
-          <p class="font-medium text-xl">
-            <img src="/assets/images/computer.png" height="15" width="15" alt="lucasprag emoji" class="inline mb-1" />
+        <a href="/" class="px-4 py-2 rounded">
+          <p class="font-medium text-2xl">
+            <img src="/assets/images/computer.png" height="20" width="20" alt="lucasprag emoji" class="inline mb-1" />
             <span class="ml-2 hover:underline hover:underline-offset-4">lucasprag</span>
           </p>
         </a>
@@ -95,7 +95,7 @@
       <div class="hidden sm:ml-6 sm:block">
         <div class="flex space-x-4">
           <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-          <a href="/" class="btn-nav mt-3" aria-current="">Home</a>
+          <a href="/" class="btn-nav mt-3" aria-current="">Posts</a>
           <a href="/projects" class="btn-nav mt-3" aria-current="page">Projects</a>
         </div>
       </div>
@@ -132,15 +132,15 @@
 
   <!-- Mobile menu, show/hide based on menu state. -->
   <div class="hidden sm:hidden bg-gray-300 dark:bg-gray-900 rounded" id="mobile-menu">
-    <div class="space-y-1 px-2 py-2">
-      <a href="/" class="block btn-nav" aria-current="">Home</a>
+    <div class="space-y-3 px-2 py-5">
+      <a href="/" class="block btn-nav" aria-current="">Posts</a>
       <a href="/projects" class="block btn-nav" aria-current="page">Projects</a>
     </div>
   </div>
 </nav>
 
-    <main class="flex-1">
-      <h1 class="py-3 px-5 font-semibold text-2xl border-gray-200 dark:border-gray-700">
+    <main class="flex-1 mt-1 md:mt-3">
+      <h1 class="py-3 px-5 font-semibold text-4xl border-gray-200 dark:border-gray-700">
   Projects
 </h1>
 
@@ -150,7 +150,7 @@
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
       <a href="https://sharethegood.news/" target="_blank" rel="noreferrer"
-        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md">
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-2xl">
         Share The Good News <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
   <g id="External_Link">
     <path id="Vector"
@@ -159,7 +159,7 @@
   </g>
 </svg>
       </a>
-      <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
+      <div class="text-lg mt-1 text-gray-700 dark:text-gray-400">
         Helping christians share the good news of Jesus in Canada.
       </div>
     </div>
@@ -169,7 +169,7 @@
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
       <a href="https://storypoints.online/" target="_blank" rel="noreferrer"
-        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md">
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-2xl">
         StoryPoints.online <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
   <g id="External_Link">
     <path id="Vector"
@@ -178,7 +178,7 @@
   </g>
 </svg>
       </a>
-      <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
+      <div class="text-lg mt-1 text-gray-700 dark:text-gray-400">
         Estimate your stories & tasks faster in real time without letting the first response influence the others.
       </div>
     </div>
@@ -188,7 +188,7 @@
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
       <a href="https://marketplace.visualstudio.com/items?itemName=lucasprag.teamdocs" target="_blank" rel="noreferrer"
-        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md">
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-2xl">
         VSCode Extension: TeamDocs <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
   <g id="External_Link">
     <path id="Vector"
@@ -197,7 +197,7 @@
   </g>
 </svg>
       </a>
-      <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
+      <div class="text-lg mt-1 text-gray-700 dark:text-gray-400">
         TeamDocs ensures that your centralized documentation is conveniently accessible from the Activity Bar, regardless of the specific project you are currently working on.
       </div>
     </div>
@@ -207,7 +207,7 @@
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
       <a href="https://github.com/lucasprag/simpleblack" target="_blank" rel="noreferrer"
-        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md">
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-2xl">
         SimpleBlack <svg width="18px" height="18px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="inline">
   <g id="External_Link">
     <path id="Vector"
@@ -216,7 +216,7 @@
   </g>
 </svg>
       </a>
-      <div class="text-sm mt-1 text-gray-700 dark:text-gray-400">
+      <div class="text-lg mt-1 text-gray-700 dark:text-gray-400">
         A black colorscheme for (neo)vim, real black background, #000000.
       </div>
     </div>
