deploy: 55308f16c7194f0b6b6c51cf9537cc630e14ad32

--- a/projects.html
+++ b/projects.html
@@ -160,7 +160,7 @@
 </svg>
       </a>
       <div class="text-lg mt-1 text-gray-700 dark:text-gray-400">
-        Helping christians share the good news of Jesus in Canada.
+        Helping christians share the good news of Jesus in the US & Canada.
       </div>
     </div>
   </div>
